# vyatta-op-firewall

./: .frlog  .gitignore  COPYING  Makefile.am  configure.ac
debian/: README  changelog  control  copyright  lintian  rules
lib/Vyatta/FirewallOpMode/: Summary.pm
scripts/firewall/: vyatta-clear-firewall  vyatta-show-firewall-summary.pl  vyatta-show-firewall.pl
src/xsl/: show_firewall.xsl  show_firewall_detail.xsl  show_firewall_statistics.xsl  show_firewall_statistics_brief.xsl
templates/clear/firewall/: node.def
templates/clear/firewall/ipv6-modify/node.tag/: node.def
templates/clear/firewall/ipv6-name/node.tag/: node.def
templates/clear/firewall/modify/node.tag/: node.def
templates/clear/firewall/name/: node.def
templates/clear/firewall/name/node.tag/: node.def
templates/clear/policy/: node.def
templates/clear/policy/ipv6-route/: node.def
templates/clear/policy/ipv6-route/node.tag/: node.def
templates/clear/policy/route/node.tag/: node.def
templates/reset/firewall/group/: node.def
templates/reset/firewall/group/address-group/: node.def
templates/reset/firewall/group/network-group/: node.def
templates/reset/firewall/group/port-group/: node.def
templates/show/firewall/: node.def
templates/show/firewall/detail/: node.def
templates/show/firewall/group/: node.def
templates/show/firewall/group/node.tag/: node.def
templates/show/firewall/ipv6-modify/: node.def
templates/show/firewall/ipv6-modify/node.tag/: node.def
templates/show/firewall/ipv6-name/: node.def
templates/show/firewall/ipv6-name/node.tag/: node.def
templates/show/firewall/modify/: node.def
templates/show/firewall/modify/detail/: node.def
templates/show/firewall/modify/node.tag/: node.def
templates/show/firewall/modify/statistics/: node.def
templates/show/firewall/name/: node.def
templates/show/firewall/name/node.tag/: node.def
templates/show/firewall/node.tag/: node.def
templates/show/firewall/node.tag/detail/: node.def
templates/show/firewall/statistics/: node.def
templates/show/firewall/summary/: node.def
templates/show/policy/: node.def
templates/show/policy/ipv6-route/: node.def
templates/show/policy/route/: node.def
(+59 files in other folders)
